--- a/index.html
+++ b/index.html
@@ -357,6 +357,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
     <script src="js/circle-progress.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/salesiq.js"></script>
+    <script src="js/companyfield.js"></script>
 </body>
 
 </html>
