--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 // Your code here
                 if(triggername=="Alerter"){
                     alert("Alerter JS API");
+			console.log("Alerter JS API");
                 }
             });
             // other JSAPIs here
